Update readme and add .gitreview
Change-Id: I5887e1cd952db0d1f8d48a43fec8f01cc97eaa9a